--- a/_config.yml
+++ b/_config.yml
@@ -99,4 +99,4 @@ disqus_show_comment_count: false
 google_analytics_tracking_id: UA-70876418-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
