--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ github_skip_forks: true
 
 # Twitter
 twitter_user:
-twitter_tweet_button: true
+twitter_tweet_button: false
 
 # Google +1
 google_plus_one: false
@@ -99,4 +99,4 @@ disqus_show_comment_count: false
 google_analytics_tracking_id: UA-70876418-1
 
 # Facebook Like
-facebook_like: true
+facebook_like: false
